<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerRecordatoriosActivity">

    <TextView
        android:id="@+id/textViewVerRecordatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/verRecordatorios"
        android:textColor="@color/colorApp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagenVerRecordatorio"
        android:layout_width="127dp"
        android:layout_height="113dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/horario_estudiantil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVerRecordatorio" />

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="376dp"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenVerRecordatorio">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorApp">

            <TextView
                android:id="@+id/textViewNombreRec"
                android:layout_width="78dp"
                android:layout_height="wrap_content"
                android:text="@string/nombreRecordatorioTbl"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewMateriaRec"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/materiatbl"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewTipoRec"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/tipoRecordatoriotbl"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewDescripcionRec"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:text="@string/descripciontbl"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </TableLayout>

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/eliminarRecordatorio"
        app:backgroundTint="@color/colorApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>